# aezen_fyp

./: RAG_INTEGRATION.md  design_guidelines.md  package-lock.json  package.json  tailwind.config.ts
aezen-backend/: README.md  package-lock.json  (+1 more)
fastapi_backend/: pyproject.toml  test_ui.py
fastapi_backend/chatbot_backend/: main.py  verify_fastapi.py
fastapi_backend/chatbot_backend/chat_data/: 03225676122.json  03225686122.json
fastapi_backend/chatbot_backend/chat_data/08f842ce-bc0a-4748-a070-8b1b9f9c1c72/: 253102590546079.json  923054659504.json  923084000527.json  abd@gmail.com.json
fastapi_backend/chatbot_backend/chat_data/1abad07a-5cc3-45f9-8bb6-f427f1490398/: 120363040518969284.json  19087438704679.json  923084000527.json  923225590265.json  923261433770.json  test@gmail.com.json
fastapi_backend/chatbot_backend/chat_data/test_tenant/: test_user.json
fastapi_backend/chatbot_backend/data/: chunks.pkl  index.faiss  index.pkl
fastapi_backend/chatbot_backend/data/08f842ce-bc0a-4748-a070-8b1b9f9c1c72/: chunks.pkl
fastapi_backend/chatbot_backend/data/08f842ce-bc0a-4748-a070-8b1b9f9c1c72/vectorstore.faiss/: index.faiss  index.pkl
fastapi_backend/chatbot_backend/data/1abad07a-5cc3-45f9-8bb6-f427f1490398/: chunks.pkl
fastapi_backend/chatbot_backend/data/test_tenant/: chunks.pkl
fastapi_backend/chatbot_backend/modules/: chat_storage.py  intent_classifier.py  pdf_processor.py  query_rewriter.py  rag.py  team.py  ticket_classifier.py  ticket_utils.py  web_loader.py
fastapi_backend/chatbot_backend/tickets/: bf05cf58-ccfd-449b-b9e5-65d4799f37c9.json
(+2158 files in other folders)
